Fix overflow in email placeholder column

--- a/src/pretalx/static/orga/scss/_layout.scss
+++ b/src/pretalx/static/orga/scss/_layout.scss
@@ -1331,7 +1331,7 @@ div.mail-preview {
   overflow-y: auto;
   position: absolute;
   right: 0;
-  padding: 0 28px 0 16px;
+  padding: 0 12px;
   top: 50px;
   border-left: 1px solid $gray-light;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
